Allow export and import of user interface and timed list
While user interface loading works in many cases, the grid is not
automatically resized which causes issues with very wide saved UIs.

--- a/client/interface.html
+++ b/client/interface.html
@@ -93,6 +93,7 @@
 		<span class="graphsettings">Show last <input type="text" class="graph_valnum"> values</input></span>
 	</li>
 
+	<!-- Timed list -->
 	<li data-row="1" data-col="15" data-sizex="8" data-sizey="5" class="gli">
 	<div id="timedlist_container">
 		<div class="dispheading">Timed list</div>
@@ -105,6 +106,24 @@
 			Current: <input type="text" id="tlist_curr" />A&nbsp;&nbsp;
 			<input type="button" id="tlist_add" value="Add" />
 			<input type="button" id="tlist_stop" value="Stop" />
+		</div>
+	</div>
+	</li>
+
+	<!-- Export / Import -->
+	<li data-row="6" data-col="15" data-sizex="8" data-sizey="2" class="gli">
+	<div id="eximport_container">
+		<div class="eximcategory"><h1>Timed List</h1>
+			<div class="eximbutton" id="exptlist">
+				<span class="eximicon">↓</span><br/>Download</div>
+			<div class="eximbutton" id="imptlist">
+				<span class="eximicon">↑</span><br/>Upload</div>
+		</div>
+		<div class="eximcategory"><h1>User Interface</h1>
+			<div class="eximbutton" id="expui">
+				<span class="eximicon">↓</span><br/>Download</div>
+			<div class="eximbutton" id="impui">
+				<span class="eximicon">↑</span><br/>Upload</div>
 		</div>
 	</div>
 	</li>
